[package]
name = "konfig"
version.workspace = true
edition.workspace = true
publish = false
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "konfig"
path = "main.rs"

[lib]
name = "konfig"
path = "lib.rs"

[features]
integration = []
# Enables in-process pyroscope-rs CPU profiling agent. The agent is only
# started at runtime if PYROSCOPE_SERVER_ADDRESS is set; this feature gates
# whether the pyroscope crates are compiled in at all. Off by default so
# the default `konfig` image stays slim — opt in via the `konfig-profiling`
# image variant.
profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]
# Enables the tokio-console (console-subscriber) tracing layer. Off by
# default; when enabled, set `RUST_CONSOLE=1` at runtime to install the
# console gRPC server on the default port (6669) for `tokio-console` clients.
tokio_console = ["dep:console-subscriber"]
# Installs snmalloc as the global allocator. The Bazel `rust_binary` for
# `konfig_bin` sets this feature and pulls the actual crate from
# `@snmalloc//snmalloc-rs:snmalloc_rs` (jayakasadev/snmalloc fork). Cargo
# builds do not enable it by default — `cargo build` falls back to the
# System allocator, which is fine for clippy/test loops.
snmalloc = ["dep:snmalloc-rs"]
# Enables the `/debug/heap-profile.pprof` endpoint which calls
# `snmalloc_rs::SnMalloc.snapshot().write_pprof_gz()`. The required API
# lives in the jayakasadev/snmalloc fork's `profiling` cargo feature
# (not in the upstream snmalloc-rs 0.3 surface), so this feature is
# wired only by the Bazel `:konfig_bin_heapprof` target — which pulls
# `@snmalloc//snmalloc-rs:snmalloc_rs_profiling` (fork-built with
# `profiling`). Cargo builds never enable this feature.
snmalloc_profiling = ["snmalloc"]

[[test]]
name = "integration_watcher"
path = "tests/integration_watcher.rs"
required-features = ["integration"]

[[test]]
name = "integration_watch_timing"
path = "tests/integration_watch_timing.rs"
required-features = ["integration"]

[[test]]
name = "integration_grpc"
path = "tests/integration_grpc.rs"
required-features = ["integration"]

[[test]]
name = "cp_integration"
path = "tests/cp_integration.rs"
required-features = ["integration"]

[dependencies]
arc-swap = {workspace = true}
async-trait = {workspace = true}
axum = {version = "0.8", default-features = false, features = ["tokio", "http1"]}
base64 = {workspace = true}
bytes = {workspace = true}
clap = {version = "4", features = ["derive", "env"]}
dashmap = {workspace = true}
futures-util = "0.3"
kube = {version = "0.98", features = ["runtime", "client"]}
k8s-openapi = {version = "0.24", features = ["v1_31"]}
lazy_static = "1"
prometheus = {version = "0.14", default-features = false}
prost = {workspace = true}
tonic-prost = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = "0.9"
tokio = {workspace = true, features = ["full", "tracing"]}
tokio-stream = "0.1"
tonic = {workspace = true}
tonic-health = "0.14.6"
tracing = {workspace = true}
# Peer-cert identity extraction for the audit log (CU-86ahrwd6h). Parses the
# DER leaf cert from `tonic::Request::peer_certs` to read SAN URI / Subject CN.
x509-parser = {workspace = true}
# `json` feature: `RUST_LOG_FORMAT=json` selects the JSON event encoder for
# log aggregation (CU-86ahrwd64); the default human format keeps `env-filter`.
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
# OpenTelemetry distributed tracing (Phase 7, CU-86ahzwj17). The
# `tracing-opentelemetry` bridge exports the gRPC RPC root spans to an
# OTLP/gRPC collector. Versions are the 0.32/0.33 family that pins
# `tonic ^0.14.1` + `prost ^0.14` transitively — the SAME majors the konfig
# crate already uses (tonic 0.14.6 / prost 0.14.3) — so the OTLP exporter
# reuses the existing tonic/prost build, no duplicate gRPC stack in the tree.
# Export is opt-in by `OTEL_EXPORTER_OTLP_ENDPOINT`; with no collector the
# layer is a no-op (see `telemetry.rs`). NEVER opentelemetry-prometheus
# (deprecated/slow) — bridge only.
opentelemetry = "0.32"
opentelemetry_sdk = {version = "0.32", default-features = false, features = ["trace"]}
# default-features OFF drops the `reqwest-blocking-client` + `http-proto`
# exporters (default-on) so only the OTLP/gRPC (tonic) path is compiled —
# reuses the konfig crate's existing tonic/prost rather than pulling reqwest.
opentelemetry-otlp = {version = "0.32", default-features = false, features = ["grpc-tonic", "trace"]}
tracing-opentelemetry = "0.33"
# Non-blocking stdout writer for the tracing subscriber — moves the
# `LineWriterShim<StdoutRaw>::write_all` work off the runtime threads onto a
# dedicated background worker, eliminating a 30 ms / 1.6% self-CPU hot path
# observed on the synchronous writer (CU-86aj360ae pyroscope capture).
tracing-appender = "0.2.5"
thiserror = {workspace = true}
# Tokio runtime metrics — exported via the existing /metrics Prometheus
# endpoint. Requires `--cfg tokio_unstable` (set in .bazelrc + .cargo/config.toml).
tokio-metrics = {version = "0.4", default-features = false, features = ["rt"]}
# Optional — pulled in by the `profiling` feature; the default `konfig`
# image is built without these so it stays slim.
pyroscope = {version = "0.5", optional = true}
pyroscope_pprofrs = {version = "0.2", optional = true}
# Optional — pulled in by the `tokio_console` feature. Off by default so the
# default image stays slim; opt in if you want to attach a `tokio-console`
# client to the running process.
console-subscriber = {version = "0.4", optional = true}

# Optional — pulled in by the `snmalloc` feature. Bazel builds enable the
# feature and replace this dep with `@snmalloc//snmalloc-rs:snmalloc_rs`
# at link time. Cargo invocations that need snmalloc (e.g. local profiling
# runs) can opt in via `cargo build --features snmalloc`.
snmalloc-rs = {version = "0.3", optional = true}

[build-dependencies]
tonic-prost-build = {workspace = true}

[dev-dependencies]
tokio = {version = "1.52.3", features = ["test-util"]}

[lints.clippy]
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
