[package]
name = "konfig-flamediff"
version.workspace = true
edition.workspace = true
publish = false
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "konfig-flamediff"
path = "src/main.rs"

[dependencies]
clap = {version = "4", features = ["derive"]}
# Turn eBPF/pyroscope's mangled Rust symbols (_ZN4ring...) into readable
# `ring::aead::...` names so the baseline + gate summary are human-friendly.
rustc-demangle = "0.1"
serde_json = {workspace = true, features = ["std"]}
