load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy", "rustfmt_test")

load("@rules_rust//rust:defs.bzl", "rust_test")

rust_binary(
    name = "konfig_loadtest",
    # Exclude src/bin/ — that's the separate `gate` binary (own main).
    srcs = glob(["src/**/*.rs"], exclude = ["src/bin/**"]),
    tags = ["konfig", "loadtest", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        "//rust/konfig",
        "@konfig_crates//:clap",
        "@konfig_crates//:futures-util",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tonic",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
)

# Perf-regression gate (CU-86aj08v98) — p99 vs newest committed baseline.
rust_binary(
    name = "gate",
    srcs = ["src/bin/gate.rs"],
    tags = ["konfig", "loadtest", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        "@konfig_crates//:clap",
        "@konfig_crates//:serde_json",
    ],
)

rust_test(
    name = "gate_test",
    size = "small",
    crate = ":gate",
    tags = ["konfig", "loadtest", "rust", "unit"],
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    tags = ["konfig", "loadtest", "rust", "unit"],
    targets = [
        ":gate",
        ":konfig_loadtest",
    ],
)

rust_clippy(
    name = "clippy_test",
    testonly = True,
    tags = ["konfig", "loadtest", "rust", "unit"],
    deps = [":konfig_loadtest"],
)

rust_clippy(
    name = "gate_clippy_test",
    testonly = True,
    tags = ["konfig", "loadtest", "rust", "unit"],
    deps = [":gate"],
)
