[package]
name = "konfig-loadtest"
version.workspace = true
edition.workspace = true
publish = false
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "konfig-loadtest"
path = "src/main.rs"

# Perf-regression gate (CU-86aj08v98): compares a fresh results.json p99 vs the
# newest committed baseline. Separate bin so it stays a tiny, testable tool.
[[bin]]
name = "konfig-loadtest-gate"
path = "src/bin/gate.rs"

[dependencies]
clap = {version = "4", features = ["derive"]}
futures-util = "0.3"
konfig = {path = "../../rust/konfig"}
serde_json = {workspace = true, features = ["std"]}
tokio = {workspace = true, features = ["full"]}
tonic = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {version = "0.3", features = ["env-filter", "registry"]}

[lints.clippy]
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
