load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "teardown",
    srcs = ["teardown.sh"],
    visibility = ["//visibility:public"],
)

# heap_delta — wraps `go tool pprof -diff_base` to emit a steady-state heap
# delta (warmup snapshot subtracted) from two konfig-heapprof pprof captures.
# CU-86aj7kavv. Needs `go` (or a standalone `pprof`) on PATH at runtime.
sh_binary(
    name = "heap_delta",
    srcs = ["heap_delta.sh"],
    visibility = ["//visibility:public"],
)

# import-images — push freshly built bench images from the dockerd store into
# Docker Desktop's k8s.io containerd namespace so pods (IfNotPresent :latest)
# don't silently run a stale image. CU-86aj7kawk. Needs docker on PATH.
sh_binary(
    name = "import_images",
    srcs = ["import-images.sh"],
    visibility = ["//visibility:public"],
)
